# Spec

./: Cargo.toml  README.md
src/: case_block.rs  lib.rs  spec.rs  spec_fn.rs
tests/: global.rs
