[package]
name = "spec-fn"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "A proof-of-concept crate of adding 'function specialization' to rust"
repository = "https://github.com/ComicalCache/Spec"
readme = "README.md"

[dependencies]
# TODO: remove extra traits
syn = { version = "2.0.106", features = ["full"] }
proc-macro2 = "1.0.101"
quote = "1.0.40"

[lib]
proc-macro = true
